force-app/main/default/objects/Custom_Doc_Link__c/Custom_Doc_Link__c.object-meta.xml
<CustomObject>
    <label>Custom Doc Link</label>
    <nameField>
        <label>Custom Doc Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Doc Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>