force-app/main/default/objects/Custom_Doc_Link__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>Answer__c</referenceTo>
    <relationshipLabel>Custom Doc Links</relationshipLabel>
    <relationshipName>Custom_Doc_Links</relationshipName>
    <type>Lookup</type>
</CustomField>