force-app/main/default/objects/Custom_Doc_Link__c/fields/Custom_Note__c.field-meta.xml
<CustomField>
    <fullName>Custom_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Note</label>
    <referenceTo>Custom_Note__c</referenceTo>
    <relationshipLabel>Custom Doc Links</relationshipLabel>
    <relationshipName>Custom_Doc_Links</relationshipName>
    <type>Lookup</type>
</CustomField>