force-app/main/default/objects/Custom_Doc_Link__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Custom Doc Links</relationshipLabel>
    <relationshipName>Custom_Doc_Links</relationshipName>
    <type>Lookup</type>
</CustomField>