force-app/main/default/objects/Custom_Doc_Link__c/fields/Questionnaire_Task__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Task</label>
    <referenceTo>Questionnaire_Task__c</referenceTo>
    <relationshipLabel>Custom Doc Links</relationshipLabel>
    <relationshipName>Custom_Doc_Links</relationshipName>
    <type>Lookup</type>
</CustomField>